<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    >

    <com.github.florent37.expansionpanel.ExpansionHeader
        android:id="@+id/spektrumHeader"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/project_blue"
        app:expansion_layout="@id/expansionLayout"
        app:expansion_toggleOnClick="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/spectrums"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/headerIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear1"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtOfset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ofset" />

                <TextView
                    android:id="@+id/txtBandGenisligiSpektrum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/band_genisligi_spektrum" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear1">

                <EditText
                    android:id="@+id/edtOfset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    tools:ignore="Autofill,LabelFor" />

                <EditText
                    android:id="@+id/edtBandGenisligiSpektrum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    tools:ignore="Autofill,LabelFor"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear3"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear2"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtPencereUz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pencere_uz" />

                <TextView
                    android:id="@+id/txtWindowingTip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/windowing_tip" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear3">

                <EditText
                    android:id="@+id/edtPencereUz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    tools:ignore="Autofill,LabelFor" />

                <!--Selectable -->
                <Spinner
                    android:id="@+id/spinnerWindowingTip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear5"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear4"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txtFrekCoz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/frek_coz" />

                <TextView
                    android:id="@+id/txtSelaleZAraligi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selale_z_araligi" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear5">

                <!--Selectable -->
                <Spinner
                    android:id="@+id/spinnerFrekCoz"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"/>

                <!--Selectable -->
                <Spinner
                    android:id="@+id/spinnerSelaleZAraligi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear7"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linear6"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linear8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtSinyalIstat"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/sinyal_stat" />

                    <!--Selectable -->
                    <Spinner
                        android:id="@+id/spinnerSinyalIstat"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/btnStatTemizle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/stat_temizle"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.github.florent37.expansionpanel.ExpansionLayout>
</androidx.appcompat.widget.LinearLayoutCompat>